# motion_detection_ideas

./: .gitignore  MOTION_ESTIMATOR_README.md  README.md  algorithm_overview_testing.ipynb  algorithm_overview_testing.py  baseline.json  baseline_cpp.txt  benchmark_orientation_detection.ipynb  console_reader.py  eval_temp.py  requirements.txt  test_motion_estimator
app/: README_MotionEstimator.md  simple_test.cpp  test_motion_estimator.cpp
app/src/motion_detection/: MotionDetector.cpp  MotionDetector.hpp  motion_detection.cpp  motion_detection.h  motion_estimator.cpp  motion_estimator.h  quaternion.cpp  quaternion.h  tools.cpp  tools.h
app/src/motion_detection/testing/: CHANGES_SUMMARY.md  README.md  advanced_motion_parser.py  analysis.ipynb  (+11 more)
cpp/: CMakeLists.txt
cpp/src/: baseline.cpp  baseline.h  change_detection.cpp  change_detection.h  main.cpp  orientation_filter.cpp  orientation_filter.h
data/: imu1.csv
motion_detection_ideas/: orientation_change_research.ipynb  orientation_change_research.py  orientation_evaluation.ipynb  simple_filter.ipynb  simple_filter.py
motion_detection_ideas/raw_data/: 1043.csv  motion_data.csv
motion_detection_ideas/test_01/: motion_data_move_-15az_45s.csv  motion_data_move_-27al_56s.csv  motion_data_move_28al_50s.csv  motion_data_move_30az_45s.csv  motion_data_static_30s.csv  motion_data_vibrations_139s.csv
paper/: %DOCFILE.blg  main.tex  references.bib
sensors_framework/: __init__.py  detection.py  evaluation.py  orientation.py  processing.py  state.py
testing/motion_detection/: console_reader.py  enhanced_md.py
